fix overflow

--- a/css/main.css
+++ b/css/main.css
@@ -424,7 +424,7 @@ body {
   background-color: #333;
   color: white;
   font-size: 2.8rem;
-  width: 100vw;
+  margin: 0;
 }
 
 .logo--row--template {
@@ -432,12 +432,12 @@ body {
 }
 @media (max-width: 56.25em) {
   .logo--row--template {
-    margin: 1rem 1.5rem;
+    margin: 1rem 0;
   }
 }
 @media (max-width: 37.5em) {
   .logo--row--template {
-    margin: 0.5rem 1.3rem;
+    margin: 0.5rem 0;
   }
 }
 
@@ -461,6 +461,7 @@ body {
   color: white;
   font-size: 5rem;
   height: 90vh;
+  margin: 0;
 }
 @media (max-width: 56.25em) {
   .hero--container--template {
@@ -676,12 +677,6 @@ body {
 .mobile-search-btn {
   font-size: 1.5rem;
   color: rgba(211, 211, 211, 0.8);
-}
-
-.header,
-.main,
-.footer {
-  width: 100%;
 }
 
 .hero-home {
