--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -1,9 +1,3 @@
-.header,
-.main,
-.footer
-{
-    width: 100%;
-}
 
 .hero-home
 {
